# hamurai

./: .gitmodules  CMakeLists.txt  README.md
hamuraid/: CMakeLists.txt
hamuraid/src/: mainc.cc
lib/: CMakeLists.txt
lib/include/: any.h  dataevent.h  dataitem.h  dataqueue.h  event.h  eventmanager.h  eventqueue.h  exception.h  executionbackend.h  genericqueue.h  graph.h  hamurai.h  id.h  identifiable.h  initevent.h  kernel.h  link.h  lockfreequeue.h  naiveexecutionbackend.h  naivescheduler.h  pipeline.h  port.h  scheduler.h  some.h  task.h
lib/src/: dataqueue.cc  event.cc  eventqueue.cc  hamurai.cc  kernel.cc  link.cc  naiveexecutionbackend.cc  naivescheduler.cc  pipeline.cc  port.cc  scheduler.cc
test/: CMakeLists.txt
