project (LIBHAMURAI)

set( CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${PROJECT_SOURCE_DIR}/cmake")

include_directories(${LIBHAMURAI_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${LIBHAMURAI_SOURCE_DIR}/extdeps/concurrentqueue)

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pthread" )

# LIBRARY SOURCE CODE
file (GLOB_RECURSE HAMURAI_SRC ${LIBHAMURAI_SOURCE_DIR}/src/*.c*)
file (GLOB_RECURSE HAMURAI_HEADERS ${LIBHAMURAI_SOURCE_DIR}/include/*.h)

# CORE KERNELS
file( GLOB_RECURSE CORE_KERNEL_SRC ${LIBHAMURAI_SOURCE_DIR}/kernels/core/*.c* )
file( GLOB_RECURSE CORE_KERNEL_HEADERS ${LIBHAMURAI_SOURCE_DIR}/kernels/core/*.h )

add_library(hamurai SHARED ${HAMURAI_SRC} ${HAMURAI_HEADERS} ${CORE_KERNEL_SRC} ${CORE_KERNEL_HEADERS} )

target_link_libraries( hamurai ${DEPS} )
